--- a/src/pages/projects/flackie.astro
+++ b/src/pages/projects/flackie.astro
@@ -1,6 +1,6 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
     title: "flackie",
@@ -11,15 +11,7 @@ export const metadata = {
     image: "/flackie-icon.svg",
     github: "https://github.com/hex248/flackie",
     hidden: true,
-    tags: [
-        "Raspberry Pi",
-        "Python",
-        "C++",
-        "CMake",
-        "Electronics",
-        "Pillow",
-        "Image Generation",
-    ],
+    tags: ["Raspberry Pi", "Python", "C++", "CMake", "Electronics", "Pillow", "Image Generation"],
     type: "personal",
 };
 ---
