--- a/src/pages/projects/good-morning.astro
+++ b/src/pages/projects/good-morning.astro
@@ -1,29 +1,18 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
-  title: "good morning!",
-  description:
-    "An app for couples or friends to share daily notices with songs and photos",
-  date: "October 2025",
-  slug: "good-morning",
-  image: "/good-morning-icon.png",
-  url: "https://gm.ob248.com",
-  github: "https://github.com/hex248/good-morning",
-  hidden: false,
-  tags: [
-    "Web",
-    "React",
-    "TypeScript",
-    "Go",
-    "PostgreSQL",
-    "AWS S3",
-    "Databases",
-    "OAuth2",
-    "Spotify API",
-  ],
-  type: "personal",
+    title: "good morning!",
+    description: "An app for couples or friends to share daily notices with songs and photos",
+    date: "October 2025",
+    slug: "good-morning",
+    image: "/good-morning-icon.png",
+    url: "https://gm.ob248.com",
+    github: "https://github.com/hex248/good-morning",
+    hidden: false,
+    tags: ["Web", "React", "TypeScript", "Go", "PostgreSQL", "AWS S3", "Databases", "OAuth2", "Spotify API"],
+    type: "personal",
 };
 ---
 
