--- a/src/pages/projects/issue.astro
+++ b/src/pages/projects/issue.astro
@@ -1,27 +1,18 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
-  title: "Issue",
-  description:
-    "A simple project management tool for developers. Born out of frustration with Jira.",
-  date: "December 2025 - Present",
-  slug: "issue",
-  image: "/issue-icon.svg",
-  url: "https://issue.ob248.com",
-  github: "https://github.com/hex248/issue",
-  hidden: false,
-  tags: [
-    "Web",
-    "React",
-    "TypeScript",
-    "Tauri",
-    "PostgreSQL",
-    "Databases",
-    "Bun",
-  ],
-  type: "personal",
+    title: "Issue",
+    description: "A simple project management tool for developers. Born out of frustration with Jira.",
+    date: "December 2025 - Present",
+    slug: "issue",
+    image: "/issue-icon.svg",
+    url: "https://issue.ob248.com",
+    github: "https://github.com/hex248/issue",
+    hidden: false,
+    tags: ["Web", "React", "TypeScript", "Tauri", "PostgreSQL", "Databases", "Bun"],
+    type: "personal",
 };
 ---
 
