--- a/src/pages/projects/mizu.astro
+++ b/src/pages/projects/mizu.astro
@@ -1,23 +1,15 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
     title: "MIZU",
-    description:
-        "A discord bot card trading and collection game. (Currently inactive, 4000+ players) ",
+    description: "A discord bot card trading and collection game. (Currently inactive, 4000+ players) ",
     date: "2021 - 2024",
     slug: "mizu",
     image: "/mizu-icon.svg",
     hidden: false,
-    tags: [
-        "Node.js",
-        "TypeScript",
-        "PostgreSQL",
-        "AWS S3",
-        "Discord API",
-        "Database",
-    ],
+    tags: ["Node.js", "TypeScript", "PostgreSQL", "AWS S3", "Discord API", "Database"],
     type: "personal",
 };
 ---
