--- a/src/pages/projects/shleep.astro
+++ b/src/pages/projects/shleep.astro
@@ -1,11 +1,10 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
     title: "Shleep",
-    description:
-        "A couch co-op base defense game where you protect a sleepign child from nightmares.",
+    description: "A couch co-op base defense game where you protect a sleepign child from nightmares.",
     date: "February - June 2023",
     slug: "shleep",
     image: "/shleep-icon.svg",
