--- a/src/pages/projects/watercooler.astro
+++ b/src/pages/projects/watercooler.astro
@@ -1,26 +1,16 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
     title: "Watercooler",
-    description:
-        "Virtual office space for remote teams allowing quick questions and spontaneous chats.",
+    description: "Virtual office space for remote teams allowing quick questions and spontaneous chats.",
     date: "March 2025",
     slug: "watercooler",
     image: "/watercooler-icon.svg",
     // github: "https://github.com/hex248/watercooler",
     hidden: true,
-    tags: [
-        "Web",
-        "React",
-        "TypeScript",
-        "WebRTC",
-        "LiveKit",
-        "PostgreSQL",
-        "OAuth2",
-        "Databases",
-    ],
+    tags: ["Web", "React", "TypeScript", "WebRTC", "LiveKit", "PostgreSQL", "OAuth2", "Databases"],
     type: "personal",
 };
 ---
