--- a/src/pages/projects/glimpse.astro
+++ b/src/pages/projects/glimpse.astro
@@ -1,6 +1,6 @@
 ---
-import ProjectPage from "../../components/ProjectPage.astro";
 import Demo from "../../components/Demo.astro";
+import ProjectPage from "../../components/ProjectPage.astro";
 
 export const metadata = {
     title: "glimpse",
@@ -11,15 +11,7 @@ export const metadata = {
     url: "https://glimpse.ob248.com",
     github: "https://github.com/hex248/glimpse",
     hidden: false,
-    tags: [
-        "Web",
-        "React",
-        "TypeScript",
-        "PostgreSQL",
-        "Blob Storage",
-        "Databases",
-        "OAuth2",
-    ],
+    tags: ["Web", "React", "TypeScript", "PostgreSQL", "Blob Storage", "Databases", "OAuth2"],
     type: "personal",
 };
 ---
