--- a/src/pages/projects/sprint.astro
+++ b/src/pages/projects/sprint.astro
@@ -8,7 +8,7 @@ export const metadata = {
     date: "December 2025 - Present",
     slug: "sprint",
     image: "/sprint-icon.svg",
-    url: "https://sprint.ob248.com",
+    url: "https://sprintpm.org",
     github: "https://github.com/hex248/sprint",
     hidden: false,
     tags: ["Web", "React", "TypeScript", "Tauri", "PostgreSQL", "Databases", "Bun"],
